--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Alugar ou Comprar?",
   "main": "index.js",
   "scripts": {
-    "test": "npm test"
+    "start": "http-server ./api & node server.js"
   },
   "repository": {
     "type": "git",
@@ -24,7 +24,27 @@
     "url": "https://github.com/olxbrasil/desafioimoveis/issues"
   },
   "homepage": "https://github.com/olxbrasil/desafioimoveis#readme",
+  "devDependencies": {
+    "babel-core": "^6.9.1",
+    "babel-eslint": "^6.1.0",
+    "babel-loader": "^6.2.4",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-1": "^6.5.0",
+    "eslint-plugin-react": "^5.1.1",
+    "eslint": "^2.13.1",
+    "react-hot-loader": "^3.0.0-beta.2",
+    "webpack": "^1.13.1",
+    "webpack-dev-server": "^1.14.1"
+  },
   "dependencies": {
-    "interestjs": "^0.1.0"
+    "interestjs": "^0.1.0",
+    "lodash": "^4.14.1",
+    "mobx": "^2.4.1",
+    "mobx-react": "^3.5.3",
+    "mobx-react-devtools": "^4.2.0",
+    "react": "^15.1.0",
+    "react-dom": "^15.1.0"
   }
 }
