--- a/package.json
+++ b/package.json
@@ -32,19 +32,26 @@
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-1": "^6.5.0",
-    "eslint-plugin-react": "^5.1.1",
+    "css-loader": "^0.23.1",
     "eslint": "^2.13.1",
+    "eslint-plugin-react": "^5.1.1",
+    "node-sass": "^3.8.0",
     "react-hot-loader": "^3.0.0-beta.2",
+    "sass-loader": "^4.0.0",
+    "style-loader": "^0.13.1",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
     "interestjs": "^0.1.0",
     "lodash": "^4.14.1",
+    "material-design-lite": "^1.1.3",
+    "material-ui": "^0.15.3",
     "mobx": "^2.4.1",
     "mobx-react": "^3.5.3",
     "mobx-react-devtools": "^4.2.0",
-    "react": "^15.1.0",
-    "react-dom": "^15.1.0"
+    "react": "^15.3.0",
+    "react-dom": "^15.3.0",
+    "react-tap-event-plugin": "^1.0.0"
   }
 }
