--- a/package.json
+++ b/package.json
@@ -52,6 +52,9 @@
     "mobx-react-devtools": "^4.2.0",
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
-    "react-tap-event-plugin": "^1.0.0"
+    "react-redux": "^4.4.5",
+    "react-tap-event-plugin": "^1.0.0",
+    "redux": "^3.5.2",
+    "redux-thunk": "^2.1.0"
   }
 }
