--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "mobx": "^2.4.1",
     "mobx-react": "^3.5.3",
     "mobx-react-devtools": "^4.2.0",
+    "numeral": "^1.5.3",
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
     "react-redux": "^4.4.5",
