--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
+    "classnames": "^2.2.5",
     "interestjs": "^0.1.0",
     "lodash": "^4.14.1",
     "material-design-lite": "^1.1.3",
