--- a/.eslintrc
+++ b/.eslintrc
@@ -7,15 +7,12 @@
     "browser": true,
     "node": true
   },
-  "parser": "babel-eslint",
   "rules": {
-    "quotes": [2, "single"],
-    "strict": [2, "never"],
-    "react/jsx-uses-react": 2,
-    "react/jsx-uses-vars": 2,
-    "react/jsx-no-undef" : 2,
-    "react/react-in-jsx-scope": 2,
+    "import/no-extraneous-dependencies": 0,
+    "import/no-unresolved": 0
   },
+  "parser": "babel-eslint",
+  "extends": "eslint-config-airbnb",
   "plugins": [
     "react"
   ]
