--- a/package.json
+++ b/package.json
@@ -34,14 +34,13 @@
     "babel-preset-stage-1": "^6.5.0",
     "css-loader": "^0.23.1",
     "eslint": "^2.13.1",
+    "eslint-config-airbnb": "^10.0.0",
     "eslint-plugin-react": "^5.1.1",
     "node-sass": "^3.8.0",
-    "react-hot-loader": "^3.0.0-beta.2",
     "sass-loader": "^4.0.0",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.1",
-    "webpack-dev-server": "^1.14.1",
-    "whatwg-fetch": "^1.0.0"
+    "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
     "classnames": "^2.2.5",
@@ -51,9 +50,11 @@
     "material-ui": "^0.15.3",
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
+    "react-hot-loader": "^3.0.0-beta.2",
     "react-redux": "^4.4.5",
     "react-tap-event-plugin": "^1.0.0",
     "redux": "^3.5.2",
-    "redux-thunk": "^2.1.0"
+    "redux-thunk": "^2.1.0",
+    "whatwg-fetch": "^1.0.0"
   }
 }
