--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "eslint": "^3.2.2",
     "eslint-config-airbnb": "^10.0.0",
     "eslint-plugin-react": "^6.0.0",
+    "http-server": "^0.9.0",
     "node-sass": "^3.8.0",
     "sass-loader": "^4.0.0",
     "style-loader": "^0.13.1",
