--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "fastclick": "1.0.6",
     "front-matter": "2.1.1",
     "history": "4.4.0",
+    "interestjs": "^0.1.0",
     "isomorphic-style-loader": "1.1.0",
     "markdown-it": "8.1.0",
     "node-fetch": "1.6.3",
