--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "poststylus": "^0.2.3",
     "react-addons-test-utils": "^15.3.2",
     "redux-immutable-state-invariant": "^1.2.4",
+    "redux-mock-store": "^1.2.2",
     "resolve-url-loader": "^1.6.0",
     "spec": "^1.0.1",
     "style-loader": "^0.13.1",
