--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "babel-polyfill": "^6.16.0",
     "ejs": "^2.5.2",
     "express": "^4.14.0",
+    "jeet": "^7.1.0",
     "nodemon": "^1.11.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
