--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "express": "^4.14.0",
     "jeet": "^7.1.0",
     "nodemon": "^1.11.0",
+    "numeral": "^2.0.4",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-hot-loader": "^3.0.0-beta.6",
