--- a/package.json
+++ b/package.json
@@ -35,9 +35,11 @@
   },
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.15.3",
     "babel-cli": "^6.16.0",
     "babel-core": "^6.17.0",
     "babel-polyfill": "^6.16.0",
+    "babel-runtime": "^6.22.0",
     "ejs": "^2.5.2",
     "express": "^4.14.0",
     "jeet": "^7.1.0",
@@ -51,6 +53,7 @@
     "react-router-redux": "^4.0.7",
     "redux": "^3.6.0",
     "redux-actions": "^1.2.1",
+    "redux-fsa-thunk": "0.0.2",
     "redux-logger": "^2.7.4",
     "redux-thunk": "^2.1.0"
   },
@@ -63,6 +66,7 @@
     "babel-plugin-transform-class-properties": "^6.16.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-flow-strip-types": "^6.14.0",
+    "babel-plugin-transform-runtime": "^6.22.0",
     "babel-preset-es2015": "^6.16.0",
     "babel-preset-es2017": "^6.16.0",
     "babel-preset-react": "^6.16.0",
@@ -93,6 +97,7 @@
     "iflow-react-router": "^1.2.1",
     "jsdom": "^9.8.3",
     "mocha": "^3.1.2",
+    "moxios": "^0.3.0",
     "nyc": "^8.4.0",
     "opener": "^1.4.2",
     "postcss-loader": "^1.0.0",
