--- a/package.json
+++ b/package.json
@@ -40,9 +40,11 @@
     "babel-core": "^6.17.0",
     "babel-polyfill": "^6.16.0",
     "babel-runtime": "^6.22.0",
+    "css-modules-require-hook": "^4.0.5",
     "ejs": "^2.5.2",
     "express": "^4.14.0",
     "jeet": "^7.1.0",
+    "node-sass": "^4.5.0",
     "nodemon": "^1.11.0",
     "numeral": "^2.0.4",
     "react": "^15.3.2",
@@ -76,7 +78,6 @@
     "clean-webpack-plugin": "^0.1.13",
     "copy-webpack-plugin": "^3.0.1",
     "css-loader": "^0.25.0",
-    "css-modules-require-hook": "^4.0.5",
     "css-mqpacker": "^5.0.1",
     "ejs-loader": "^0.3.0",
     "enzyme": "^2.5.1",
@@ -101,15 +102,15 @@
     "nyc": "^8.4.0",
     "opener": "^1.4.2",
     "postcss-loader": "^1.0.0",
+    "postcss-scss": "^0.4.0",
     "poststylus": "^0.2.3",
     "react-addons-test-utils": "^15.3.2",
     "redux-immutable-state-invariant": "^1.2.4",
     "redux-mock-store": "^1.2.2",
     "resolve-url-loader": "^1.6.0",
+    "sass-loader": "^4.1.1",
     "spec": "^1.0.1",
     "style-loader": "^0.13.1",
-    "stylus": "^0.54.5",
-    "stylus-loader": "^2.3.1",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.2",
     "webpack-dev-middleware": "^1.8.4",
