--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-redux": "^4.4.5",
     "react-router": "^3.0.0",
     "react-router-redux": "^4.0.7",
+    "react-select": "^1.0.0-rc.3",
     "redux": "^3.6.0",
     "redux-actions": "^1.2.1",
     "redux-fsa-thunk": "0.0.2",
@@ -109,6 +110,7 @@
     "redux-mock-store": "^1.2.2",
     "resolve-url-loader": "^1.6.0",
     "sass-loader": "^4.1.1",
+    "sinon": "^1.17.7",
     "spec": "^1.0.1",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
