--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "babel-core": "^6.17.0",
     "babel-polyfill": "^6.16.0",
     "babel-runtime": "^6.22.0",
+    "cors": "^2.8.1",
     "css-modules-require-hook": "^4.0.5",
     "ejs": "^2.5.2",
     "express": "^4.14.0",
