--- a/package.json
+++ b/package.json
@@ -28,16 +28,35 @@
     "interestjs": "^0.1.0"
   },
   "devDependencies": {
+    "autoprefixer": "^7.1.1",
     "babel-cli": "^6.24.1",
+    "babel-loader": "^7.1.1",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "css-loader": "^0.28.4",
     "eslint": "^4.1.1",
     "eslint-config-airbnb": "^15.0.2",
+    "eslint-loader": "^1.8.0",
     "eslint-plugin-import": "^2.6.1",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.1.0",
-    "react-hot-loader": "next"
+    "extract-text-webpack-plugin": "^2.1.2",
+    "file-loader": "^0.11.2",
+    "fs-extra": "^3.0.1",
+    "glob": "^7.1.2",
+    "html-webpack-plugin": "^2.29.0",
+    "path": "^0.12.7",
+    "postcss-loader": "^2.0.6",
+    "purify-css": "^1.2.5",
+    "purifycss-webpack": "^0.7.0",
+    "react-hot-loader": "next",
+    "style-loader": "^0.18.2",
+    "svgo-loader": "^1.2.1",
+    "url-loader": "^0.5.9",
+    "webpack": "^3.0.0",
+    "webpack-config-utils": "^2.3.0",
+    "webpack-dev-server": "^2.5.0"
   }
 }
