--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
   },
   "homepage": "https://github.com/olxbrasil/desafioimoveis#readme",
   "dependencies": {
-    "interestjs": "^0.1.0"
+    "interestjs": "^0.1.0",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "react-hot-loader": "next"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.1",
@@ -51,7 +54,6 @@
     "postcss-loader": "^2.0.6",
     "purify-css": "^1.2.5",
     "purifycss-webpack": "^0.7.0",
-    "react-hot-loader": "next",
     "style-loader": "^0.18.2",
     "svgo-loader": "^1.2.1",
     "url-loader": "^0.5.9",
