--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Alugar ou Comprar?",
   "main": "index.js",
   "scripts": {
-    "test": "npm test"
+    "test": "npm test",
+    "start": "cross-env NODE_ENV=development webpack-dev-server --config ./webpack.config.babel.js",
+    "clean": "rm -rf ./build",
+    "build": "cross-env NODE_ENV=production webpack --config ./webpack.config.babel.js"
   },
   "repository": {
     "type": "git",
@@ -38,6 +41,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "cross-env": "^5.0.1",
     "css-loader": "^0.28.4",
     "eslint": "^4.1.1",
     "eslint-config-airbnb": "^15.0.2",
