--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "interestjs": "^0.1.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-hot-loader": "next"
+    "react-hot-loader": "next",
+    "tachyons": "^4.7.4"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.1",
