--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-hot-loader": "next",
+    "react-redux": "^5.0.5",
+    "redux": "^3.7.1",
     "tachyons": "^4.7.4"
   },
   "devDependencies": {
