--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-hot-loader": "next",
     "react-redux": "^5.0.5",
     "redux": "^3.7.1",
+    "redux-thunk": "^2.2.0",
     "tachyons": "^4.7.4"
   },
   "devDependencies": {
