--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-redux": "^5.0.5",
     "redux": "^3.7.1",
     "redux-thunk": "^2.2.0",
+    "semantic-ui-react": "^0.70.0",
     "tachyons": "^4.7.4"
   },
   "devDependencies": {
