--- a/.eslintrc
+++ b/.eslintrc
@@ -17,6 +17,7 @@
     "import/no-unresolved": 0,
     "import/extensions": 0,
     "react/jsx-filename-extension": 0,
+    "react/forbid-prop-types": 0,
     "global-require": 0,
     "semi": [2, "never"],
     "comma-dangle": [2, "always-multiline"],
