--- a/.eslintrc
+++ b/.eslintrc
@@ -18,6 +18,7 @@
     "import/extensions": 0,
     "react/jsx-filename-extension": 0,
     "react/forbid-prop-types": 0,
+    "max-len": 0,
     "global-require": 0,
     "semi": [2, "never"],
     "comma-dangle": [2, "always-multiline"],
