--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,5 @@
 {
+  "parser": "babel-eslint",
   "extends": ["standard", "standard-jsx"],
   "rules": {
     "comma-dangle": ["error", "always-multiline"]
