--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Alugar ou Comprar?",
   "main": "index.js",
   "scripts": {
-    "test": "npm test",
-    "start": "webpack-dev-server"
+    "start": "webpack-dev-server",
+    "build": "NODE_ENV=production webpack --optimize-minimize"
   },
   "repository": {
     "type": "git",
