--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.6",
     "promise": "8.0.1",
+    "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dev-utils": "^4.0.1",
     "react-dom": "^15.6.1",
@@ -115,6 +116,7 @@
   },
   "devDependencies": {
     "node-sass": "^4.5.3",
-    "sass-loader": "^6.0.6"
+    "sass-loader": "^6.0.6",
+    "sass-resources-loader": "^1.3.0"
   }
 }
