--- a/package.json
+++ b/package.json
@@ -57,11 +57,6 @@
       "node"
     ]
   },
-  "babel": {
-    "presets": [
-      "react-app"
-    ]
-  },
   "eslintConfig": {
     "extends": "react-app"
   },
@@ -115,7 +110,10 @@
     "whatwg-fetch": "2.0.3"
   },
   "devDependencies": {
+    "babel-plugin-react-css-modules": "^3.3.0",
+    "jest-cli": "^21.1.0",
     "node-sass": "^4.5.3",
+    "postcss-scss": "^1.0.2",
     "sass-loader": "^6.0.6",
     "sass-resources-loader": "^1.3.0"
   }
