--- a/package.json
+++ b/package.json
@@ -58,7 +58,10 @@
     ]
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": "react-app",
+    "globals": {
+      "it": true
+    }
   },
   "keywords": [
     "olx",
