--- a/package.json
+++ b/package.json
@@ -17,49 +17,38 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": ""
+    "test": "mocha --reporter spec ./scripts/test.js \"./src/**/*.test.js{,x}\"",
+    "test:watch": "npm run test -- --watch"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/olxbrasil/desafioimoveis.git"
   },
-  "jest": {
-    "collectCoverageFrom": [
-      "src/**/*.{js,jsx}"
-    ],
-    "setupFiles": [
-      "<rootDir>/config/polyfills.js"
-    ],
-    "testMatch": [
-      "<rootDir>/src/**/__tests__/**/*.js?(x)",
-      "<rootDir>/src/**/?(*.)(spec|test).js?(x)"
-    ],
-    "testEnvironment": "node",
-    "testURL": "http://localhost",
-    "transform": {
-      "^.+\\.(js|jsx)$": "<rootDir>/node_modules/babel-jest",
-      "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
-      "^(?!.*\\.(js|jsx|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
-    },
-    "transformIgnorePatterns": [
-      "[/\\\\]node_modules[/\\\\].+\\.(js|jsx)$"
-    ],
-    "moduleNameMapper": {
-      "^react-native$": "react-native-web"
-    },
-    "moduleFileExtensions": [
-      "web.js",
-      "js",
-      "json",
-      "web.jsx",
-      "jsx",
-      "node"
-    ]
-  },
   "eslintConfig": {
     "extends": "react-app",
+    "env": {
+      "es6": true,
+      "browser": true,
+      "node": true,
+      "jquery": true,
+      "mocha": true
+    },
+    "plugins": [
+      "react",
+      "jsx-a11y",
+      "chai-friendly"
+    ],
     "globals": {
-      "it": true
+      "window": true,
+      "jQuery": true,
+      "chai": true,
+      "expect": true,
+      "sinon": true,
+      "$": true
+    },
+    "rules": {
+      "no-unused-expressions": 0,
+      "chai-friendly/no-unused-expressions": 2
     }
   },
   "keywords": [
@@ -74,9 +63,9 @@
     "autoprefixer": "7.1.2",
     "babel-core": "6.25.0",
     "babel-eslint": "7.2.3",
-    "babel-jest": "20.0.3",
     "babel-loader": "7.1.1",
     "babel-preset-react-app": "^3.0.2",
+    "babel-register": "^6.26.0",
     "babel-runtime": "6.26.0",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
@@ -87,15 +76,13 @@
     "eslint-loader": "1.9.0",
     "eslint-plugin-flowtype": "2.35.0",
     "eslint-plugin-import": "2.7.0",
-    "eslint-plugin-jsx-a11y": "5.1.1",
-    "eslint-plugin-react": "7.1.0",
     "extract-text-webpack-plugin": "3.0.0",
     "file-loader": "0.11.2",
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
     "interestjs": "^0.1.0",
-    "jest": "20.0.4",
     "loan-calc": "^0.2.1",
+    "loanjs": "^1.0.2",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.6",
@@ -116,10 +103,19 @@
   },
   "devDependencies": {
     "babel-plugin-react-css-modules": "^3.3.0",
-    "jest-cli": "^21.1.0",
+    "chai": "^4.1.2",
+    "enzyme": "^2.9.1",
+    "eslint-plugin-chai-friendly": "^0.4.0",
+    "eslint-plugin-jsx-a11y": "^5.1.1",
+    "eslint-plugin-react": "^7.1.0",
+    "expect": "^21.1.0",
+    "jsdom": "^11.2.0",
+    "mocha": "^3.5.3",
     "node-sass": "^4.5.3",
     "postcss-scss": "^1.0.2",
+    "react-addons-test-utils": "^15.6.0",
     "sass-loader": "^6.0.6",
-    "sass-resources-loader": "^1.3.0"
+    "sass-resources-loader": "^1.3.0",
+    "sinon": "^3.2.1"
   }
 }
