Finish unit tests

--- a/.babelrc
+++ b/.babelrc
@@ -1,17 +1,40 @@
 {
-  "presets": [
-    "react-app"
-  ],
-  "plugins": [
-    [
-      "react-css-modules",
-      {
-        "filetypes": {
-          ".scss": {
-            "syntax": "postcss-scss"
+  "env": {
+    "development": {
+      "presets": [
+        "react-app"
+      ],
+      "plugins": [
+        [
+          "react-css-modules",
+          {
+            "webpackHotModuleReloading": true,
+            "filetypes": {
+              ".scss": {
+                "syntax": "postcss-scss"
+              }
+            }
           }
-        }
-      }
-    ]
-  ]
+        ]
+      ]
+    },
+    "test": {
+      "presets": [
+        "react-app"
+      ],
+      "plugins": [
+        [
+          "react-css-modules",
+          {
+            "generateScopedName": "[local]",
+            "filetypes": {
+              ".scss": {
+                "syntax": "postcss-scss"
+              }
+            }
+          }
+        ]
+      ]
+    }
+  }
 }
