--- a/package.json
+++ b/package.json
@@ -114,6 +114,7 @@
     "node-sass": "^4.5.3",
     "postcss-scss": "^1.0.2",
     "react-addons-test-utils": "^15.6.0",
+    "react-test-renderer": "^15.6.1",
     "sass-loader": "^6.0.6",
     "sass-resources-loader": "^1.3.0",
     "sinon": "^3.2.1"
