--- a/package.json
+++ b/package.json
@@ -25,6 +25,6 @@
   },
   "homepage": "https://github.com/olxbrasil/desafioimoveis#readme",
   "dependencies": {
-    "interestjs": "^0.1.0"
+    "loanjs": "1.0.2"
   }
 }
