--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/olxbrasil/desafioimoveis#readme",
   "dependencies": {
+    "@types/jest": "^21.1.2",
     "autoprefixer": "7.1.2",
     "axios": "^0.16.2",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
@@ -33,6 +34,7 @@
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
+    "loanjs": "^1.0.2",
     "moxios": "^0.4.0",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
@@ -69,6 +71,7 @@
     "@types/react": "^16.0.9",
     "@types/react-dom": "^16.0.0",
     "node-sass": "^4.5.3",
+    "redux-devtools-extension": "^2.13.2",
     "sass-loader": "^6.0.6"
   },
   "jest": {
@@ -80,8 +83,7 @@
       "<rootDir>/config/polyfills.js"
     ],
     "testMatch": [
-      "<rootDir>/src/**/__tests__/**/*.ts?(x)",
-      "<rootDir>/src/**/?(*.)(spec|test).ts?(x)"
+      "<rootDir>/app/**/**/?(*.)(spec|test).ts?(x)"
     ],
     "testEnvironment": "node",
     "testURL": "http://localhost",
@@ -110,7 +112,7 @@
     ],
     "globals": {
       "ts-jest": {
-        "tsConfigFile": "C:\\projetos\\desafioimoveis\\app2\\tsconfig.test.json"
+        "tsConfigFile": "./tsconfig.test.json"
       }
     }
   },
