--- a/package.json
+++ b/package.json
@@ -23,21 +23,27 @@
   "homepage": "https://github.com/olxbrasil/desafioimoveis#readme",
   "devDependencies": {
     "babel-preset-flow": "^6.23.0",
-    "react-scripts": "1.0.14"
+    "react-scripts": "1.0.14",
+    "redux-immutable-state-invariant": "^2.1.0"
   },
   "dependencies": {
     "express": "^4.16.1",
     "flow-bin": "^0.56.0",
     "loanjs": "1.0.2",
     "react": "^16.0.0",
-    "react-dom": "^16.0.0"
+    "react-dom": "^16.0.0",
+    "react-hot-loader": "^1.3.1",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-	"flow": "flow",
-	"backend": "node api/"
+    "flow": "flow",
+    "backend": "node api/"
   }
 }
