--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/olxbrasil/desafioimoveis#readme",
   "dependencies": {
     "@types/jest": "^21.1.2",
+    "@types/numeral": "0.0.22",
     "autoprefixer": "7.1.2",
     "axios": "^0.16.2",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
@@ -36,6 +37,7 @@
     "jest": "20.0.4",
     "loanjs": "^1.0.2",
     "moxios": "^0.4.0",
+    "numeral": "^2.0.6",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.6",
