--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-dev-utils": "^4.0.1",
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.6",
+    "recharts": "^1.0.0-apha.5",
     "redux": "^3.7.2",
     "source-map-loader": "^0.2.1",
     "style-loader": "0.18.2",
