--- a/package.json
+++ b/package.json
@@ -25,11 +25,15 @@
     "@types/jest": "^21.1.2",
     "@types/numeral": "0.0.22",
     "autoprefixer": "7.1.2",
-    "axios": "^0.16.2",
+    "axios": "^0.15.3",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
     "css-loader": "0.28.4",
     "dotenv": "4.0.0",
+    "enzyme": "^3.1.0",
+    "enzyme-adapter-react-15": "^1.0.1",
+    "enzyme-adapter-react-16": "^1.0.1",
+    "enzyme-to-json": "^3.1.2",
     "extract-text-webpack-plugin": "3.0.0",
     "file-loader": "0.11.2",
     "fs-extra": "3.0.1",
@@ -41,6 +45,7 @@
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.6",
+    "process": "^0.11.10",
     "promise": "8.0.1",
     "react": "^16.0.0",
     "react-dev-utils": "^4.0.1",
@@ -48,6 +53,7 @@
     "react-redux": "^5.0.6",
     "recharts": "^1.0.0-apha.5",
     "redux": "^3.7.2",
+    "redux-mock-store": "^1.3.0",
     "source-map-loader": "^0.2.1",
     "style-loader": "0.18.2",
     "sw-precache-webpack-plugin": "0.11.4",
@@ -66,7 +72,7 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js --env=jsdom"
+    "test": "node scripts/test.js --env=jsdom a"
   },
   "devDependencies": {
     "@types/jest": "^21.1.2",
@@ -86,7 +92,8 @@
       "<rootDir>/config/polyfills.js"
     ],
     "testMatch": [
-      "<rootDir>/app/**/**/?(*.)(spec|test).ts?(x)"
+      "<rootDir>/app/**/**/?(*.)(spec|test).ts?(x)",
+      "<rootDir>/app/**/**/?(*.)(spec|test).tsx?(x)"
     ],
     "testEnvironment": "node",
     "testURL": "http://localhost",
@@ -99,7 +106,8 @@
       "[/\\\\]node_modules[/\\\\].+\\.(js|jsx|ts|tsx)$"
     ],
     "moduleNameMapper": {
-      "^react-native$": "react-native-web"
+      "^react-native$": "react-native-web",
+      "^.+\\.scss$": "<rootDir>/config/jest/cssTransform.js"
     },
     "moduleFileExtensions": [
       "web.ts",
