--- a/package.json
+++ b/package.json
@@ -48,9 +48,11 @@
     "process": "^0.11.10",
     "promise": "8.0.1",
     "react": "^16.0.0",
+    "react-addons-test-utils": "^15.6.2",
     "react-dev-utils": "^4.0.1",
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.6",
+    "react-test-renderer": "^16.0.0",
     "recharts": "^1.0.0-apha.5",
     "redux": "^3.7.2",
     "redux-mock-store": "^1.3.0",
@@ -80,6 +82,7 @@
     "@types/react": "^16.0.9",
     "@types/react-dom": "^16.0.0",
     "node-sass": "^4.5.3",
+    "react-addons-test-utils": "^15.6.2",
     "redux-devtools-extension": "^2.13.2",
     "sass-loader": "^6.0.6"
   },
