--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "cors": "^2.8.4",
     "express": "^4.16.1",
     "flow-bin": "^0.56.0",
+    "glamor": "^2.20.40",
+    "glamour": "^1.2.3",
     "loanjs": "1.0.2",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
