--- a/package.json
+++ b/package.json
@@ -24,8 +24,14 @@
   "devDependencies": {
     "babel-plugin-transform-async-to-generator": "^6.24.1",
     "babel-preset-flow": "^6.23.0",
+    "enzyme": "^3.1.0",
+    "enzyme-adapter-react-16": "^1.0.1",
+    "jest-enzyme": "^4.0.1",
     "react-scripts": "1.0.14",
-    "redux-immutable-state-invariant": "^2.1.0"
+    "react-test-renderer": "^16.0.0",
+    "redux-immutable-state-invariant": "^2.1.0",
+    "redux-mock-store": "^1.3.0",
+    "sinon": "^4.0.1"
   },
   "dependencies": {
     "axios": "^0.16.2",
